[tool.poetry]
name = "py-playground"
version = "0.1.0"
description = ""
authors = ["Umair Ali <Umair.Ali@spglobal.com>"]
homepage = "https://github.com/umair-ali/python-playground"
repository = "https://github.com/umair-ali/python-playground"
license = "MIT"
readme = "README.md"
packages = [{include = "py_playground"}]

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.24.1"
fastapi = "^0.98.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}


[tool.poetry.group.lint.dependencies]
isort = "^5.12.0"
black = "^23.3.0"
flake8 = "^6.0.0"
mypy = "^1.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.mypy]
# 3rd party import
ignore_missing_imports = true
# dynamic typing
disallow_any_unimported = true
disallow_any_expr = false
disallow_any_decorated = false
disallow_any_explicit = true
disallow_any_generics = false
disallow_subclassing_any = true
# platform
python_version = "3.10"
# untyped
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
# None and Optional
no_implicit_optional = true
# Warnings
warn_return_any = false
warn_unreachable = true
# Misc
pretty = true
